--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -67,7 +67,7 @@
     background: var(--color-secondary);
     color: var(--color-button-text);
     border: 0;
-    border-radius: 1.2rem;
+    border-radius: 0.8rem;
     cursor: pointer;
     font-weight: 700;
     font-size: 1.6rem;
@@ -76,11 +76,13 @@
     align-items: center;
     justify-content: center;
     transition: background 0.4s;
-    margin-top: 3.2rem;
+    transition: box-shadow 0.4s;
+    margin-top: 2.5rem;
 }
 
 #search-teachers button:hover {
     background-color: var(--color-secondary-dark);
+    box-shadow: 2px 2px 2px 1px #00000033;
 }
 
 .select-block label, .input-block label {
@@ -99,6 +101,7 @@
     padding: 0 1.6rem;
     font-size: 1.6rem;
     font-family: 'Montserrat', sans-serif;
+    box-shadow: 2px 2px 2px 1px #00000033;
 }
 
 .input-block {
@@ -113,7 +116,7 @@
     background: var(--color-primary-light);
     position: absolute;
     left: 1.6rem;
-    right: 1.6rem;
+
     bottom: 0;
 }
 
@@ -127,6 +130,7 @@
     border: 1px solid var(--color-line-in-white);
     border-radius: 0.8rem;
     margin-top: 2.4rem;
+    box-shadow: 2px 2px 2px 0.1px #00000033;
 }
 
 .teacher-item header{
